Added office email, made some content changes.

--- a/_config.yml
+++ b/_config.yml
@@ -87,7 +87,7 @@ author:
   employer         :
   pubmed           :
   googlescholar    : "https://scholar.google.com/citations?user=F3Nl7VIAAAAJ&hl=en&oi=sra"
-  email            : mashrurmahmud@iut-dhaka.edu
+  email            : 
   researchgate     :
   uri              :
   bitbucket        :
