March updates for site.

--- a/_config.yml
+++ b/_config.yml
@@ -109,7 +109,7 @@ author:
   stackoverflow    : 10229754/mercury
   steam            :
   tumblr           :
-  twitter          :
+  twitter          : mashrur_morshed
   vine             :
   weibo            :
   xing             :
