--- a/_config.yml
+++ b/_config.yml
@@ -82,9 +82,9 @@ analytics:
 author:
   name             : "Mashrur Morshed"
   avatar           : "self_profile.jpg"
-  bio              : "AI Engineer at Intelligent Machines"
-  location         : "Dhaka, Bangladesh"
-  employer         :
+  bio              : "PhD Student, MSU"
+  location         : "East Lansing, MI"
+  employer         : 
   pubmed           :
   googlescholar    : "https://scholar.google.com/citations?user=F3Nl7VIAAAAJ&hl=en&oi=sra"
   email            : 
